[package]
name = "mpm"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Package manager for users who have many linux distributions running on a system"
repository = "https://github.com/ushinnary/MPM-rs"
readme = "README.md"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
